add answers feature tests

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,2 +1,16 @@
 h1 = question.title
 h3 = question.body
+
+- question.answers.each do |answer|
+  p = answer.body
+
+= form_with(model: [question, answer], local: true) do |form|
+
+  = render 'shared/errors', resource: answer
+
+  h3 New answers
+  ul
+    li  = form.label :body
+    li  = form.text_area :body
+    li  = form.submit "Create answer"
+
