--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,1 +1,9 @@
-= link_to 'Ask question', new_question_path
+h2 "All questions"
+
+p
+  - @questions.each do |question|
+    = link_to question.title, question_path(question)
+    = question.body
+
+p
+  = link_to 'Ask question', new_question_path
