--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,6 +1,9 @@
-= form_with(model: [@question, @answer], local: true) do |form|
-  h3 New answers
-  ul
-    li  = form.label :body
-    li  = form.text_area :body
-    li  = form.submit "Create answer"
+= turbo_frame_tag @answer do
+  = form_with model: [@question, @answer] do |form|
+    = render 'shared/errors', resource: @answer
+
+    h3 New answers
+    ul
+      li  = form.label :body
+      li  = form.text_area :body
+      li  = form.submit "Create answer"
