--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,14 +1,6 @@
-h1 = @question.title
-h3 = @question.body
-- if is_author?(@question)
-  p = button_to 'Destroy question', question_path(@question), method: :delete
+= render 'question', question: @question
 
-= render @question.answers
-
-- if flash[:error]
-    p Найдено ошибок: #{flash[:error].count}
-    ul
-      - flash[:error].each do |error|
-        li = error
+.answers
+  = render @question.answers.sort_by_best
 
 = render 'answers/form'
