--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,9 +1,10 @@
 h2 "All questions"
 
 p
-  - @questions.each do |question|
-    = link_to question.title, question_path(question)
-    = question.body
+  = link_to 'Ask question', new_question_path, data: {turbo_frame: dom_id(Question.new)}
 
+  = turbo_frame_tag Question.new
 p
-  = link_to 'Ask question', new_question_path
+  = turbo_frame_tag 'questions' do
+    = render @questions
+
