--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,5 +1,5 @@
 = turbo_frame_tag @answer do
-  = form_with model: [@question, @answer] do |form|
+  = form_with model: [@question, @answer], data: { turbo: true } do |form|
     = render 'shared/errors', resource: @answer
 
     h3 New answers
