--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,5 +1,5 @@
 = turbo_frame_tag @question do
-  = form_with model: @question do |f|
+  = form_with model: @question, data: { turbo: true }do |f|
     = render 'shared/errors', resource: @question
     ul
       li = f.label :title
