--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -6,4 +6,6 @@
       li = f.text_field :title
       li = f.label :body
       li = f.text_area :body
+      li = f.label :files
+      li = f.file_field :files, multiple: true, direct_upload: true
       li = f.submit 'Save'
